Introduce JWT * added secured endpoint for transactions * updated Swagger
