# src/main/java/com/example/ebank/controllers/CustomerController.java
@@ -1,32 +1,19 @@
 package com.example.ebank.controllers;
 
-import com.example.ebank.models.Account;
 import com.example.ebank.models.Customer;
-import com.example.ebank.models.Transaction;
 import com.example.ebank.services.AccountService;
 import com.example.ebank.services.CustomerService;
 import com.example.ebank.services.TransactionService;
-
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeFormatterBuilder;
-import java.time.temporal.ChronoField;
-import java.util.List;
-
-import org.springframework.data.domain.Page;
-import org.springframework.format.annotation.DateTimeFormat;
+import io.swagger.annotations.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeFormatterBuilder;
+import java.time.temporal.ChronoField;
 
 @Api(value = "customers", tags = "customer", description = "the customers API")
 
@@ -72,10 +59,5 @@ public class CustomerController {
 			@ApiParam(value = "The id that needs to be fetched. Use \"1\" for testing. ", required = true) @PathVariable Long id) {
 		return ResponseEntity.ok(customerService.getOne(id));
 	}
-	
-	
-	
-
-	
 
 }
